@@ -54,8 +54,8 @@ namespace PSHdf5Input {
 class Hdf5EventId : public PSEvt::EventId {
 public:
 
-  // Default constructor
-  Hdf5EventId (int run, const PSTime::Time& time) : m_run(run), m_time(time) {}
+  Hdf5EventId (int run, const PSTime::Time& time, unsigned fiducials, unsigned ticks, unsigned vector)
+    : m_run(run), m_time(time), m_fiducials(fiducials), m_ticks(ticks), m_vector(vector) {}
 
   // Destructor
   virtual ~Hdf5EventId () ;
@@ -83,6 +83,16 @@ public:
   virtual unsigned fiducials() const;
 
   /**
+   *  @brief Returns 119MHz counter within the fiducial.
+   *
+   *  Returns the value of 119MHz counter within the fiducial for the
+   *  event code which initiated the readout. In some cases (e.g. when
+   *  reading from old HDF5 files) ticks are not know, 0 will be
+   *  returned in this case.
+   */
+  virtual unsigned ticks() const;
+
+  /**
    *  @brief Returns event counter since Configure.
    *
    *  Note that counter is saved as 15-bits integer and will overflow
@@ -107,6 +117,9 @@ private:
   // Data members
   int m_run;
   PSTime::Time m_time;
+  unsigned m_fiducials;
+  unsigned m_ticks;
+  unsigned m_vector;
 
 };
 
