@@ -61,7 +61,7 @@ public:
   typedef Hdf5IterData value_type;
 
   // Default constructor
-  explicit Hdf5RunIter (const hdf5pp::Group& grp) ;
+  explicit Hdf5RunIter (const hdf5pp::Group& grp, int runNumber) ;
 
   // Destructor
   ~Hdf5RunIter () ;
@@ -82,6 +82,7 @@ protected:
 private:
 
   hdf5pp::Group m_grp;   ///< Run group
+  int m_runNumber;
   std::list<hdf5pp::Group> m_groups; ///< Set of CalibCycle groups
   boost::scoped_ptr<Hdf5CalibCycleIter> m_ccIter;  ///< Iterator over current calib cycle
 
