@@ -20,11 +20,13 @@
 //-----------------
 #include <vector>
 #include <iterator>
+#include <boost/make_shared.hpp>
 
 //-------------------------------
 // Collaborating Class Headers --
 //-------------------------------
 #include "hdf5pp/GroupIter.h"
+#include "PSHdf5Input/Hdf5EventId.h"
 
 //-----------------------------------------------------------------------
 // Local Macros, Typedefs, Structures, Unions and Forward Declarations --
@@ -39,8 +41,9 @@ namespace PSHdf5Input {
 //----------------
 // Constructors --
 //----------------
-Hdf5CalibCycleIter::Hdf5CalibCycleIter (const hdf5pp::Group& grp)
+Hdf5CalibCycleIter::Hdf5CalibCycleIter (const hdf5pp::Group& grp, int runNumber)
   : m_grp(grp)
+  , m_runNumber(runNumber)
   , m_merger()
 {
 
@@ -89,21 +92,33 @@ Hdf5CalibCycleIter::value_type
 Hdf5CalibCycleIter::next()
 {
   typedef std::vector<Hdf5DatasetIterData> MergedData;
-  std::vector<Hdf5DatasetIterData> data;
+  MergedData data;
   data.reserve(m_merger.size());
   
+  value_type res;
+
   if (not m_merger.next(std::back_inserter(data))) {
-    return value_type(value_type::Stop);
+
+    res = value_type(value_type::Stop, boost::shared_ptr<PSEvt::EventId>());
+
   } else {
-    Hdf5IterData res(value_type::Event);
+
+    boost::shared_ptr<Hdf5EventId> eid;
+
+    if (not data.empty()) {
+      // make EventId out first item
+      const Hdf5DatasetIterData& d = data.front();
+      PSTime::Time time(d.sec, d.nsec);
+      eid = boost::make_shared<Hdf5EventId>(m_runNumber, time, d.fiducials, d.ticks, d.vector);
+    }
+
+    res = Hdf5IterData(value_type::Event, eid);
     for (MergedData::const_iterator it = data.begin(); it != data.end(); ++ it) {
       res.add(it->group, it->index);
     }
-    if (not data.empty()) {
-      res.setTime(PSTime::Time(data.front().sec, data.front().nsec));
-    }
-    return res;
   }
+
+  return res;
 }
 
 } // namespace PSHdf5Input
