@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: andy-20130314
+2013-03-14 Andy Salnikov
+- changes in the instantiation of the EventId
+
 Tag: andy-20121212
 2012-12-12 Andy Salnikov
 - Hdf5EventId gets two new method (from base interface)
